<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/Negocios"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:weightSum="3"
        android:gravity="center"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/flecha"
            android:textSize="25dp"
            android:gravity="center"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="20dp"
            android:text="Negocio"
            android:gravity="center"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1
"
            android:textSize="25dp"
            android:gravity="center"
            android:text="----------------->"/>
    </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/RvNegocios"
            android:layout_width="match_parent"
            android:layout_height="150dp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/Base"
        android:layout_below="@+id/Negocios"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:weightSum="3"
            android:gravity="center"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/flecha"
                android:textSize="25dp"
                android:gravity="center"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="20dp"
                android:text="Base"
                android:gravity="center"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1
"
                android:textSize="25dp"
                android:gravity="center"
                android:text="----------------->"/>
        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/RvBase"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="150dp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/Tamaño"
        android:layout_below="@+id/Base"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:weightSum="3"
            android:gravity="center"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/flecha"
                android:textSize="25dp"
                android:gravity="center"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="20dp"
                android:text="Tamaño"
                android:gravity="center"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1
"
                android:textSize="25dp"
                android:gravity="center"
                android:text="----------------->"/>
        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/RvTamaño"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="150dp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/Queso"
        android:layout_below="@+id/Tamaño"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:weightSum="3"
            android:gravity="center"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/flecha"
                android:textSize="25dp"
                android:gravity="center"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="20dp"
                android:text="Queso"
                android:gravity="center"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1
"
                android:textSize="25dp"
                android:gravity="center"
                android:text="----------------->"/>
        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/RvQueso"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="150dp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/Carnes"
        android:layout_below="@+id/Queso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:weightSum="3"
            android:gravity="center"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/flecha"
                android:textSize="25dp"
                android:gravity="center"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="20dp"
                android:text="Carnes"
                android:gravity="center"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1
"
                android:textSize="25dp"
                android:gravity="center"
                android:text="----------------->"/>
        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/RvCarne"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="150dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Vegetales"
        android:layout_below="@+id/Carnes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:weightSum="3"
            android:gravity="center"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/flecha"
                android:textSize="25dp"
                android:gravity="center"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="20dp"
                android:text="Vegetales"
                android:gravity="center"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1
"
                android:textSize="25dp"
                android:gravity="center"
                android:text="----------------->"/>
        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/RvVegetales"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="150dp" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/InfoAGuardar"
        android:layout_below="@+id/Vegetales"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/ImagenPizzeria"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/ic_android_black_24dp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/NomPizzeria"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="26dp"
                        android:text="@string/NombreNegocio"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="14dp"
                        android:text="@string/Precio"/>
                    <TextView
                        android:id="@+id/PrecioPizzaOriginal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/PizzaPrecio"
                        android:textSize="18dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/CantI"/>
                    <TextView
                        android:id="@+id/Ingredientes_Extras"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="3 Ingredientes Extras"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Precio por Ingrediente Extra"/>
                    <TextView
                        android:id="@+id/PrecioPorIngrediente"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="$5"
                        android:textSize="20dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="14dp"
                        android:text="Precio Total:"/>
                    <TextView
                        android:id="@+id/PrecioTotalporPizza"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/PizzaPrecio"
                        android:textSize="26dp"
                        android:gravity="center"/>
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/InfoAGuardar">

        <Button
            android:id="@+id/GuardarPizza"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Guardar" />
    </LinearLayout>
</RelativeLayout>
    </ScrollView>
</FrameLayout>